# perseus-lookup

./: .gitignore  README  README.md  greek-lookup.py  greek_lookup.py  grkfind.py  latfind.py  latin-lookup.py  latin_lookup.py  pyproject.toml  requirements.txt
tests/: test_lookup.py
